hphp/hack/test/typecheck/unbound_name/ppl_special_calls2.php
<?hh

<<__PPL>>
final class TestPPL {
  public function foo(): void {
    // We want to error on the inner sample as an unbound global id
    sample(sample);
  }
}
